--- a/index.html
+++ b/index.html
@@ -183,3 +183,36 @@ Shop now
 <!-- wp:image {"id":37,"className":"wp-block-image size-large"} -->
 <figure class="wp-block-image size-large"><img src="https://group7projectcom.files.com/2024/05/img_3484-3.jpeg?w=640" alt="" class="wp-image-37"/><figcaption class="wp-element-caption">BUY NOW</figcaption></figure>
 <!-- /wp:image -->
+
+New arrival
+<!-- wp:heading {"className":"wp-block-heading has-text-align-center"} -->
+<h2 class="wp-block-heading has-text-align-center">BEST SELLING&nbsp;</h2>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph {"className":"has-text-align-center"} -->
+<p class="has-text-align-center">NEW COLLECTION&nbsp;</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:image {"id":33} -->
+<figure class="wp-block-image"><img src="https://group7projectcom.files.com/2024/05/img_3490.jpeg?w=236" alt="" class="wp-image-33"/></figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph {"className":"has-text-align-center has-large-font-size"} -->
+<p class="has-text-align-center has-large-font-size">NO 1 best selling&nbsp;</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:image {"id":43} -->
+<figure class="wp-block-image"><img src="https://group7projectcom.files.com/2024/05/img_3492-1.jpeg?w=183" alt="" class="wp-image-43"/></figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph {"className":"has-text-align-center has-large-font-size"} -->
+<p class="has-text-align-center has-large-font-size">NO 2 best selling&nbsp;</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:image {"id":89,"sizeSlug":"large"} -->
+<figure class="wp-block-image size-large"><img src="https://group7projectcom.files.com/2024/05/img_3489-2-1.jpg?w=225" alt="" class="wp-image-89"/></figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph -->
+<p>No 3 best selling</p>
+<!-- /wp:paragraph -->
